# Lcht_MCP

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: API_CONTRACT.md  ROADMAP.md
examples/: __init__.py  claude_desktop_config.json  lichtfeld_plugin_test.py  windows_install.ps1
examples/lcht_mcp_test_plugin/: __init__.py  pyproject.toml
examples/lcht_mcp_test_plugin/core/: __init__.py  diagnostics.py  runtime_config.py  test_runner.py
examples/lcht_mcp_test_plugin/operators/: __init__.py  analyze_clusters.py  analyze_scene.py  analyze_voxel_clusters.py  apply_confirmed_cleanup.py  compare_cleanup_presets.py  diagnose_api.py  diagnose_apply_deleted_selection_lifetime.py  diagnose_native_selection.py  diagnose_tensor_mask.py  open_cleanup_workspace.py  preview_all_cleanup_categories.py  preview_cleanup_candidates.py  preview_selected_cleanup_category.py  reset_cleanup_workspace.py  restore_last_delete.py  run_safe_delete_test.py  run_test.py  run_undo_validation.py  runtime_controls.py  soft_delete_cleanup_preview.py  soft_delete_cleanup_selection.py  update_cleanup_workspace.py
examples/lcht_mcp_test_plugin/panels/: __init__.py  test_panel.py
tests/: test_cleanup_workspace.py  test_cluster_analysis.py  test_dev_cli.py  test_domain_edit_manager.py  test_domain_history.py  test_domain_scene.py  test_domain_scene_selection.py  test_domain_undo.py  test_gaussian_domain.py  test_import_regressions.py  test_lcht_mcp_test_plugin_cluster_preview.py  test_lcht_mcp_test_plugin_diagnostics.py  test_lcht_mcp_test_plugin_safe_delete.py  test_lcht_mcp_test_plugin_undo.py  test_lichtfeld_adapter_skeleton.py  test_mock_adapter.py  test_query_actions.py  test_query_dsl.py  test_requests.py  test_scene_analysis.py  test_scene_api.py  (+5 more)
(+68 files in other folders)
