[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lcht-mcp-test-plugin"
version = "0.1.0"
description = "Minimal LichtFeld Studio smoke-test plugin for Lcht_MCP."
requires-python = ">=3.11"

[tool.setuptools]
packages = ["lcht_mcp_test_plugin"]

[tool.setuptools.package-dir]
lcht_mcp_test_plugin = "."
