[project]
name = "lcht_mcp_test_plugin"
version = "0.1.0"
description = "Minimal LichtFeld Studio smoke-test plugin for Lcht_MCP."
author = "Lcht_MCP"

dependencies = [
    "pydantic>=2.7.0",
]

[tool.lichtfeld]
auto_start = true
hot_reload = true
plugin_api = ">=1,<2"
lichtfeld_version = ">=0.4.2"
required_features = []
